# PortfolioSite

./: build.sh  db.sqlite3  pyproject.toml  render.yaml
djangoplayground/: settings.py  urls.py
myapp/: views.py
myproject/: settings.py
myproject/myapp/: urls.py  views.py
myproject/myproject/: settings.py
myproject/templates/: counter.html  index.html  lucy.html  wordcounter.html
portfolio/: render.yaml
portfolio/myapp/: urls.py
website/: urls.py  views.py
website/migrations/: 0001_initial.py
website/templates/website/: counter.html  index.html  login.html  register.html  statictest.html  wordcounter.html
